defect fix align text inside the btn

--- a/style.scss
+++ b/style.scss
@@ -70,6 +70,7 @@ body{
     font-weight: bold;
     font-family: 'Ubuntu', sans-serif;
     outline: none;
+    text-align: center;
     
     &:active {
       box-shadow: 0 10px 10px -5px rgba(0,0,0,.55) inset;
